--- a/extension/chrome/src/options.htm
+++ b/extension/chrome/src/options.htm
@@ -1,7 +1,7 @@
 <html>
   <head>
   </head>
-  <body style="background: rgb(240, 240, 240)">
+  <body style="background: rgb(240, 240, 240); font-family: 'Segoe UI', Tahoma, sans-serif; font-size: 75%;">
   <div style="background: yellowx; margin: 25px">
     <img id="logo" style="border: 0px; position: relative; top:1px; right: 10px; width: 120px; height: 30px" />
     
@@ -15,7 +15,7 @@
       <p><input type="checkbox" id="settingsCommonDisplayHeaderIconAsButton" /><label for="settingsCommonDisplayHeaderIconAsButton" style="position: relative; top: -2px; left: 2px" id="settingsCommonDisplayHeaderIconAsButtonLabel"></label></p>
       <p><input type="checkbox" id="settingsCommonDisplayLinkIconAsButton" /><label for="settingsCommonDisplayLinkIconAsButton" style="position: relative; top: -2px; left: 2px" id="settingsCommonDisplayLinkIconAsButtonLabel"></label></p>
     </p>
-
+    <p />
     <span id="headerDisplay" style="font-weight: bold"></span>
     <p>
       <p><input type="radio" id="topDisplay" name="pageDisplay" /><label for="topDisplay" style="position: relative; top: -2px; left: 1px" id="pageDisplayTop"></label></p>
